2015-08-04  Bill Schmidt  <wschmidt@vnet.linux.ibm.com>

	* gcc.target/powerpc/vec-cmp-sel.c: Avoid test failure on machines
	without VSX an Power8 vector support.

2015-08-04  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-ccp-38.c: New testcase.

2015-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/67110
	* gcc.target/i386/iamcu/abi-iamcu.exp (additional_flags): Add
	-fno-pie -no-pie.

2015-08-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/66427
	* g++.dg/cpp1y/var-templ34.C: New.

2015-08-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/pragma_cpp_predefs_1.c: New test.
	* gcc.target/aarch64/target_attr_1.c: Likewise.
	* gcc.target/aarch64/target_attr_2.c: Likewise.
	* gcc.target/aarch64/target_attr_3.c: Likewise.
	* gcc.target/aarch64/target_attr_4.c: Likewise.
	* gcc.target/aarch64/target_attr_5.c: Likewise.
	* gcc.target/aarch64/target_attr_6.c: Likewise.
	* gcc.target/aarch64/target_attr_7.c: Likewise.
	* gcc.target/aarch64/target_attr_8.c: Likewise.
	* gcc.target/aarch64/target_attr_9.c: Likewise.
	* gcc.target/aarch64/target_attr_10.c: Likewise.
	* gcc.target/aarch64/target_attr_11.c: Likewise.
	* gcc.target/aarch64/target_attr_12.c: Likewise.
	* gcc.target/aarch64/target_attr_13.c: Likewise.
	* gcc.target/aarch64/target_attr_14.c: Likewise.
	* gcc.target/aarch64/target_attr_15.c: Likewise.

2015-08-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/target_attr_crypto_ice_1.c: New test.

2015-08-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/arm_neon-nosimd-error.c: Delete.

2015-08-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/cpu-diagnostics-3.c: Update expected error
	message.

2015-08-04  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/64022
	* gfortran.dg/ieee/ieee_7.f90: Adjust test.
	* gfortran.dg/ieee/large_1.f90: New test.

2015-08-04  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR tree-optimization/67043